force dark mode and fix padding

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,4 +1,5 @@
 @use "@/styling/colors.scss" as c;
+@use "@/styling/responsive.scss" as r;
 
 .layout {
   display: flex;
@@ -9,6 +10,10 @@
   gap: 64px;
   height: 100%;
   flex-grow: 1;
+
+  @include r.responsive("mobile") {
+    padding: 0;
+  }
 
   &:has(.button_section) {
     justify-content: center;
